--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,13 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "tightenco/ziggy": "^2.0"
+        "tightenco/ziggy": "^2.0",
+        "intervention/image-laravel": "^1.3",
+        "league/commonmark": "^2.6",
+        "spatie/laravel-medialibrary": "^11.11",
+        "dompdf/dompdf": "^3.0",
+        "league/csv": "^9.21",
+        "league/html-to-markdown": "^5.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
