--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "nunomaduro/collision": "^8.1",
         "pestphp/pest": "^3.7",
         "pestphp/pest-plugin-laravel": "^3.0",
+        "phpstan/phpstan": "^2.1",
         "squizlabs/php_codesniffer": "^3.11"
     },
     "autoload": {
